# open_iA

./: .clang-format  .editorconfig  .gitmodules  CITATION.cff  CMakeCPack.cmake  CMakeLists.txt  CTestConfig.cmake  Doxyfile  README.md  WEBSOCKETS.md  at.zfp.openia.appdata.xml  code.js  doxy-main.md  doxygen.dox  index.html  params.json
Test_files/TestITK/: CMakeLists.txt  itkNormalizedCorrelationImageFilterTest.cxx
Toolkit/: CMakeLists.txt  README.txt
Toolkit/AdaptiveOtsuThreshold/: itkAdaptiveOtsuThresholdImageFilter.h  itkAdaptiveOtsuThresholdImageFilter.txx
Toolkit/Dreamcaster/: ComparisonAndWeighting.cpp  ComparisonAndWeighting.h  PaintWidget.cpp  PaintWidget.h  Plot.h  StabilityWidget.cpp  StabilityWidget.h  config.cfg  dlg_histogram_simple.cpp  dlg_histogram_simple.h  dream_caster4.ui  dreamcaster.cpp  dreamcaster.h  dreamcaster.qrc  histogram_item.h  iAComparisonAndWeighting.cpp  iADreamCaster.cpp  iADreamCaster.h  iAPaintWidget.cpp  iAStabilityWidget.cpp  results_dialog.ui  settings.ui
Toolkit/Entropy/: EntropyImageFilter.h  EntropyImageFilter.hxx  iAEntropyImageFilter.h  iAEntropyImageFilter.hxx
Toolkit/FunctionalBoxplot/: iAFunction.h  iAFunctionalBoxplot.h
Toolkit/FuzzyCMeans/: itkFCMClassifierInitializationImageFilter.h  itkFCMClassifierInitializationImageFilter.txx  itkFuzzyClassifierImageFilter.h  itkFuzzyClassifierImageFilter.txx  itkFuzzyClassifierInitializationImageFilter.h  itkFuzzyClassifierInitializationImageFilter.txx  itkGRBFKernelInducedDistanceMetric.h  itkGRBFKernelInducedDistanceMetric.txx  itkKFCMSClassifierInitializationImageFilter.h  itkKFCMSClassifierInitializationImageFilter.txx  itkKernelInducedDistanceMetric.h  itkKernelInducedDistanceMetric.txx  itkMSKFCMClassifierInitializationImageFilter.h  itkMSKFCMClassifierInitializationImageFilter.txx  itkRBFKernelInducedDistanceMetric.h  itkRBFKernelInducedDistanceMetric.txx  itkVectorImageDuplicator.h  itkVectorImageDuplicator.txx  source.txt
Toolkit/ImageFusion/: DwtHaar1DCPPKernel_Kernels.cl  itkArtifactBasedImageFusionFilter.h  itkArtifactBasedImageFusionFilter.txx  itkDualViewImageFusionFilter.h  itkDualViewImageFusionFilter.txx  itkFHWImageFusionFilter.h  itkFHWImageFusionFilter.txx  itkThresholdImageFusionFilter.h  itkThresholdImageFusionFilter.txx  itkWaveletImageFilter.h  itkWaveletImageFilter.txx
Toolkit/LabelVoting/: MaskingLabelOverlapMeasuresImageFilter.h  MaskingLabelOverlapMeasuresImageFilter.hxx  ParametrizableLabelVotingImageFilter.h  ParametrizableLabelVotingImageFilter.hxx  ProbabilisticVotingImageFilter.h  ProbabilisticVotingImageFilter.hxx  UndecidedPixelClassifierImageFilter.h  UndecidedPixelClassifierImageFilter.hxx  iAMaskingLabelOverlapMeasuresImageFilter.h  iAMaskingLabelOverlapMeasuresImageFilter.hxx  iAParametrizableLabelVotingImageFilter.h  iAParametrizableLabelVotingImageFilter.hxx  iAProbabilisticVotingImageFilter.h  iAProbabilisticVotingImageFilter.hxx  iAUndecidedPixelClassifierImageFilter.h  iAUndecidedPixelClassifierImageFilter.hxx
Toolkit/MaximumDistance/: iAMaximumDistanceFilter.h  iAMaximumDistanceFilter.txx  itkMaximumDistance.h  itkMaximumDistance.txx
Toolkit/OpenCL/: cl_common.h
Toolkit/RemovePeaksOtsu/: iARemovePeaksOtsuThresholdImageCalculator.h  iARemovePeaksOtsuThresholdImageCalculator.txx  iARemovePeaksOtsuThresholdImageFilter.h  iARemovePeaksOtsuThresholdImageFilter.txx  itkFHWRescaleIntensityImageFilter.h  itkFHWRescaleIntensityImageFilter.txx  itkRemovePeaksOtsuThresholdImageCalculator.h  itkRemovePeaksOtsuThresholdImageCalculator.txx  itkRemovePeaksOtsuThresholdImageFilter.h  itkRemovePeaksOtsuThresholdImageFilter.txx
Toolkit/Statistics/: FIlteringLabelOverlapMeasuresImageFilter.h  FilteringLabelOverlapMeasuresImageFilter.h  FilteringLabelOverlapMeasuresImageFilter.hxx
Toolkit/UndecidedPixelClassifier/: UndecidedPixelClassifierImageFilter.h  UndecidedPixelClassifierImageFilter.hxx
cmd/: CMakeLists.txt  iACommandLineProcessor.cpp  iACommandLineProcessor.h  iALoggerStdOut.cpp  iALoggerStdOut.h  main.cpp
core/: CMakeLists.txt  PyQSS_ALA.py  bright.qss  bright_2.qss  dark.qss  dark_2.qss  open_iA.qrc  precompile.cmake
core/base/: CMakeLists.txt  defines.h  iAAbortListener.cpp  iAAbortListener.h  iAAttributeDescriptor.cpp  iAAttributeDescriptor.h  iAAttributes.cpp  iAAttributes.h  iAColorTheme.h  iAColorable.h  iAConnector.cpp  iAConnector.h  iAFileUtils.h  iAFilter.h  iAFilterRegistry.cpp  iAFilterRegistry.h  iAITKIO.h  iAImageCoordinate.h  iAImageInfo.h  iAItkVersion.h  iALUT.cpp  iALUT.h  iAListNameMapper.h  iALog.cpp  iALog.h  iALogLevelMappings.h  iALogger.h  iALookupTable.h  iAMapperImpl.h  iAMathUtility.h  iAModuleInterface.h  iANameMapper.h  iAProgress.h  iASettings.h  iASimpleTester.h  iAStringHelper.h  iAToolsITK.h  iAToolsVTK.cpp  iAToolsVTK.h  iATransferFunction.h  (+4 more)
core/charts/: CMakeLists.txt  iAChartFunction.h  iAChartFunctionBezier.cpp  iAChartFunctionBezier.h  iAChartFunctionGaussian.h  iAChartFunctionTransfer.h  iAChartWidget.h  iAChartWithFunctionsWidget.cpp  iAChartWithFunctionsWidget.h  iAFunctionColors.h  iAHistogramData.h  iAPlot.h  iAPlotData.h  iAPlotTypes.h  iAProfileWidget.h  iAQSplom.h  iASPLOMData.h  iASPMSettings.h  iAScatterPlot.h  iAScatterPlotWidget.h  iAXYPlotData.h  precompile.cmake  qcustomplot.cpp  qcustomplot.h
core/gui/: CMakeLists.txt  Mainwindow.ui  VolumePlayer.ui  bright.qss  dlg_datatypeconversion.cpp  dlg_profile.cpp  dlg_slicer.cpp  dlg_volumePlayer.h  iACheckOpenGL.h  iATLGICTLoader.h  mainwindow.h  mdichild.cpp  mdichild.h  open_iA_gui.qrc
core/images/: GEMSe_filter_reset.pdn  GEMSe_toggle_autoshrink.pdn  addBezier.pdn  camera.pdn  function.pdn  fusion.pdn  (+17 more)
gui/: CMakeLists.txt  at.zfp.openia.desktop  main.cpp  open_iA.icns  open_iA.pdn  open_iA.rc
libs/: CMakeLists.txt  PyQSS.py
modules/: CMakeLists.txt
test/: CMakeLists.txt  CreateTestConfigurations.py  Nightly_Run.bat  Nightly_Run.sh  iAFunctionalBoxplotTest.cpp  iAMathUtilityTest.cpp  iAStringHelperTest.cpp  iAVec3Test.cpp  run_test_with_img_output.cmake.in  run_with_gl.sh  run_with_xserver.sh
xinst/: CMakeLists.txt
(+3521 files in other folders)
